# embedded-ruby-vm

./: .gitignore  CLAUDE.MD  CMakeLists.txt  JVM_BUILD_GUIDE.md  LICENSE  NATIVE_EMBEDDING_GUIDE.md  QUICK_START.md  README.md  build.gradle.kts  gradle.properties  run-jvm-example.sh  settings.gradle.kts
assets/: CMakeLists.txt
assets/files/: fifo_interpreter.rb
core/: CMakeLists.txt
core/assets/: CMakeLists.txt  embed_binary.cmake  install.c  install.h  use_direct_memory.c  use_direct_memory.h
core/assets/files/: fifo_interpreter.rb
core/logging/: CMakeLists.txt  logging.c  logging.h
core/ruby-vm/: CMakeLists.txt  completion-task.h  constants.h  debug.h  env.c  env.h  exec-main-vm.c  exec-main-vm.h  log-listener.h  ruby-comm-channel.c  ruby-comm-channel.h  ruby-interpreter.c  ruby-interpreter.h  ruby-script-location.c  ruby-script.c  ruby-script.h  ruby-vm-error.c  ruby-vm-error.h  ruby-vm.c  ruby-vm.h
cpp/: CMakeLists.txt
cpp/assets/: CMakeLists.txt  install.c  install.h  use_direct_memory.c  use_direct_memory.h
cpp/assets/files/: ruby_physfs_patch.rb
cpp/logging/: logging.h
cpp/ruby-vm/: CMakeLists.txt  exec-main-vm.h  ruby-vm.c
examples/: JvmExample.kt  SimpleJavaExample.java
gradle/: libs.versions.toml
jni/: CMakeLists.txt  get_activity_parameters.c  jni_logging.c  jni_logging.h  jni_ruby_info.c  jni_ruby_info.h  ruby_vm_jni.c  ruby_vm_jni.h
jni/android/: CMakeLists.txt  android_logging.c  get_activity_parameters.h
kmp/: build.gradle.kts
kmp/src/androidMain/kotlin/com/scorbutics/rubyvm/: NativeLibraryLoader.android.kt  RubyInterpreter.android.kt  RubyScript.android.kt
kmp/src/commonMain/kotlin/com/scorbutics/rubyvm/: LogListener.kt  RubyInterpreter.kt  RubyScript.kt
kmp/src/desktopMain/kotlin/com/scorbutics/rubyvm/: NativeLibraryLoader.kt  RubyInterpreter.jvm.kt  RubyScript.jvm.kt  RubyVMNative.kt
kmp/src/desktopTest/kotlin/com/scorbutics/rubyvm/: LoadLibraryTest.kt
kmp/src/jvmMain/kotlin/com/scorbutics/rubyvm/: NativeLibraryLoader.kt  RubyInterpreter.jvm.kt  RubyScript.jvm.kt  RubyVMNative.kt
kmp/src/linuxX64Main/kotlin/: Main.kt
kmp/src/linuxX64Test/kotlin/com/scorbutics/rubyvm/: RubyVMNativeTest.kt
kmp/src/nativeInterop/cinterop/: ruby_vm.def
kmp/src/nativeMain/kotlin/com/scorbutics/rubyvm/: RubyInterpreter.native.kt  RubyScript.native.kt
logging/: CMakeLists.txt
ruby/: check_engine.rb  compile.rb  copy_saves.rb  start.rb
ruby-vm/: log-listener.h  ruby-script.h  ruby-vm.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_core.c
tests/jni/: CMakeLists.txt  test_jni.c
tests/jni-android/: CMakeLists.txt  test_jni_android_log.c
